--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "italia-utils",
+  "name": "my_rai_ut",
   "version": "4.1.0",
-  "description": "Tools and utilities for the Digital Citizenship project",
-  "repository": "https://github.com/teamdigitale/italia-utils",
-  "author": "https://teamdigitale.governo.it",
+  "description": "THIS IS ONLY FOR TEST",
+  "repository": "https://github.com/rcastino/my_rai_ut",
+  "author": "test",
   "license": "MIT",
   "bin": {
     "gen-api-models": "dist/index.js"
