ubuntu-latest x deploy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -124,7 +124,7 @@ stages:
   #    - Build / Test stages succeeded (if selected)
   - stage: Deploy_production
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'ubuntu-latest'
     condition: 
       and(
         succeeded(),
