--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "templates/"
   ],
   "scripts": {
-    "prepublishOnly": "crlf --set=LF dist/*",
-    "prepublish": "npm run build",
-    "build": "yarn rimraf dist && tsc",
-    "version": "npm run build",
-    "postversion": "git push && git push --tags",
     "lint": "tslint --project .",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "build": "yarn generate:definitions && tsc",
+    "generate:definitions": "rimraf dist"
   },
   "dependencies": {
     "fs-extra": "^6.0.0",
