--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ trigger:
 # runtime, the pipeline is currently configured to use a Windows hosted image for
 # verifying the build, and Linux OS for all other jobs for faster execution.
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'ubuntu-latest'
 
 stages:
   # A) Build and code validation (always run)
@@ -124,7 +124,7 @@ stages:
   #    - Build / Test stages succeeded (if selected)
   - stage: Deploy_production
     pool:
-      vmImage: 'macOS-latest'
+      vmImage: 'windows-2019'
     condition: 
       and(
         succeeded(),
